--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -56,7 +56,7 @@
           <img src="../static/img/books/c12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Atkins PhysicalChemistry</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/Physical Chemistry -Peter Atkins (9th edition).pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -64,7 +64,7 @@
           <img src="../static/img/books/c13.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Franis A. Organic</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/francis-a-carey-organic-chemistry-4th-ed.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -72,7 +72,7 @@
           <img src="../static/img/books/c14.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> Concise Inorganic</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/pdfcoffee.com_concise-inorganic-chemistry-5th-editionpdf-pdf-free.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -80,7 +80,7 @@
           <img src="../static/img/books/c15.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Peter Skys Organic</h5>
-            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+            <a href="../static/book/class12/A-Guidebook-of-Organic-Reaction-Mechanism-by-Peter-Sykes.pdf" class="btn btn-primary" mx-1>Read & Download</a>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
           <img src="../static/img/books/b11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Campbell Biology</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/Biology/Campbell Biology 12th edition.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
@@ -103,25 +103,57 @@
           <img src="../static/img/books/b12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Ravin Biology</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/class12/Biology/Raven_Biology_of_Plants.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
         <div class="card">
-          <img src="../static/img/books/c14.jpg" class="card-img-top" alt="...">
+          <img src="../static/img/books/biology12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title"> Concise Inorganic</h5>
-            <a href="#" class="btn btn-primary">Read & Download</a>
+            <h5 class="card-title"> NCERT Biology</h5>
+            <a type="button"
+            data-bs-toggle="modal"
+            data-bs-target="#BiologyModal"class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
-        <div class="card">
-          <img src="../static/img/books/p12.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">McGraw Hill Physics</h5>
-            <a href="#" class="btn btn-primary" mx-1>Read & Download</a>
+        <div
+        class="modal fade"
+        id="BiologyModal"
+        tabindex="-1"
+        aria-labelledby="BiologyModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="BiologyModalLabel">Book Chapters</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body text-center" id="books">
+              <a href="../static/book/class12/Biology/NCERT/chapter01.pdf" >Chapter-1</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter02.pdf" >Chapter-2</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter03.pdf" >Chapter-3</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter04.pdf" >Chapter-4</a><br>
+              <a href="../static/book/class12/Biology/NCERT/chapter05.pdf" >Chapter-5</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter06.pdf" >Chapter-6</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter07.pdf" >Chapter-7</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter08.pdf" >Chapter-8</a><br>
+              <a href="../static/book/class12/Biology/NCERT/chapter09.pdf" >Chapter-9</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter10.pdf" >Chapter-10</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter11.pdf" >Chapter-11</a>
+              <a href="../static/book/class12/Biology/NCERT/chapter12.pdf" >Chapter-12</a><br>
+              <a href="../static/book/class12/Biology/NCERT/chapter13.pdf" >Chapter-13</a> 
+            </div>
           </div>
         </div>
+      </div>
+
       </div>
     </div>
 
