update simulation feature

--- a/memorivise/templates/simulations.html
+++ b/memorivise/templates/simulations.html
@@ -9,13 +9,15 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Solar System</h4>
-        <a href="/solar" class="card-link">View this </a>
+        <p class="mb-2 text-muted">An observation of the planets in our solar system revolving around the sun in their orbit. </p>
+        <a href="/simulations/solar" class="card-link">View this </a>
       </div>
     </div>
 
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Simple Pendulum</h4>
+        <p class="mb-2 text-muted">An observation of the planets in our solar system revolving around the sun in their orbit. </p>
         <a href="/simplependulum" class="card-link">View this </a>
       </div>
     </div>
@@ -23,6 +25,7 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Ohm's Law</h4>
+        <p class="mb-2 text-muted">An observation of the planets in our solar system revolving around the sun in their orbit. </p>
         <a href="/ohm" class="card-link">View this </a>
       </div>
     </div>
@@ -30,6 +33,7 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Tidal hypothesis</h4>
+        <p class="mb-2 text-muted">An observation of the planets in our solar system revolving around the sun in their orbit. </p>
         <a href="/tidal" class="card-link">View this </a>
       </div>
     </div>
@@ -37,6 +41,7 @@
     <div class="col-lg-4 card" style="width: 18rem" id="classes">
       <div class="card-body">
         <h4 class="card-title">Force</h4>
+        <p class="mb-2 text-muted">An observation of the planets in our solar system revolving around the sun in their orbit. </p>
         <a href="/force" class="card-link">View this </a>
       </div>
     </div>
