--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -108,12 +108,10 @@
         </div>
 
         <div class="card">
-          <img src="../static/img/books/biology12.jpg" class="card-img-top" alt="...">
+          <img src="../static/img/books/ncertbio11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title"> NCERT Biology</h5>
-            <a type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#BiologyModal"class="btn btn-primary">Read & Download</a>
+            <a href="../static/book/atomic-habits.pdf" class="btn btn-primary">Read & Download</a>
           </div>
         </div>
 
