--- a/memorivise/templates/learning.html
+++ b/memorivise/templates/learning.html
@@ -9,21 +9,37 @@
     <div class="col-md-4">
       <figure class="text-center">
         <a href="/simulations"><img src="../static/img/simulearn.png" class="img-fluid"></a>
-        <figcaption><b>Simulations</b></figcaption>
+        <figcaption>Simulations</figcaption>
       </figure>
     </div>
     <div class="col-md-4">
       <figure class="text-center">
         <a href="#"><img src="../static/img/simulearn.png" class="img-fluid"></a>
-        <figcaption><b>Videos</b></figcaption>
+        <figcaption>Videos</figcaption>
       </figure>
     </div>
     <div class="col-md-4">
       <figure class="text-center">
         <a href="#"><img src="../static/img/simulearn.png" class="img-fluid"></a>
-        <figcaption><b>Experiments and Live Examples</b></figcaption>
+        <figcaption>Experiments and Live Examples</figcaption>
       </figure>
     </div>
   </div>
 </div>
+
+<style>
+  figure{
+    border: solid 1px #22222283;
+    padding: 0rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: all 0.2s;
+  }
+  figure:hover{
+    box-shadow: 2px 3px 7px 1px #2b2b2b34;
+  }
+  figcaption{
+    margin: 0.3rem auto;
+  }
+</style>
 {% endblock body %}
