--- a/memorivise/templates/science.html
+++ b/memorivise/templates/science.html
@@ -6,7 +6,7 @@
 <body>
   <div class="container">
     <header>
-      <h1 class="text-center">Memorivise books</h1>
+      <h1 class="text-center">Class 12 Books | Memorivise</h1>
     </header>
     <hr />
     <h2 class="text-center">Science Books- Physics</h2>
