--- a/memorivise/templates/resources.html
+++ b/memorivise/templates/resources.html
@@ -72,6 +72,20 @@ h1 {
       margin-bottom: 15px;
     }
 
+    figure{
+    border: solid 1px #22222283;
+    padding: 0rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    transition: all 0.2s;
+  }
+  figure:hover{
+    box-shadow: 2px 3px 7px 1px #2b2b2b34;
+  }
+  figcaption{
+    margin: 0.3rem auto;
+  }
+
     /* Styles for mobile devices */
     @media (max-width: 600px) {
       img {
